--- a/.github/workflows/aliyunossdeploy.yml
+++ b/.github/workflows/aliyunossdeploy.yml
@@ -1,8 +1,39 @@
-    - name: upload files to OSS
-      uses: fangbinwei/aliyun-oss-website-action@v1
+name:deploytoaliyunoss
+
+on:[push]
+
+jobs:
+  build:
+
+    runs-on:ubuntu-latest
+
+    steps:
+    # 切代码到 runner
+    - uses:actions/checkout@v1
       with:
-          accessKeyId: ${{ secrets.ACCESS_KEY_ID }}
-          accessKeySecret: ${{ secrets.ACCESS_KEY_SECRET }}
-          bucket: norazhao
-          endpoint: oss-cn-chengdu.aliyuncs.com
-          folder: /output
+        submodules:true
+    # 下载 git submodule
+    - uses:srt32/git-actions@v0.0.3
+      with:
+        args:gitsubmoduleupdate--init--recursive
+    # 使用 node:10
+    - name:useNode.js10.x
+      uses:actions/setup-node@v1
+      with:
+        node-version:10.x
+    # npm install
+    - name:npminstallandbuild
+      run:|
+        npm install
+        npm run build
+      env:
+        CI:true
+    # 设置阿里云OSS的 id/secret，存储到 github 的 secrets 中
+    - name:setupaliyunoss
+      uses:manyuanrong/setup-ossutil@master
+      with:
+        endpoint:oss-cn-chengdu.aliyuncs.com
+        access-key-id:${{secrets.OSS_KEY_ID}}
+        access-key-secret:${{secrets.OSS_KEY_SECRET}}
+    - name:cpfilestoaliyun
+      run:ossutilcp-rf.vuepress/distoss://norazhao/
